# match-cal

./: .gitignore  CLAUDE.md  README.md  README_HTTP.md  combined_server.py  http_server.py  index.html  index_http.html  package.json  pyproject.toml  requirements.txt  ring.flac  run_http_server.py  run_server.py  script.js  server.py  start_server.py  style.css  test_game.py  test_http_api.py  test_name_change.py  test_name_notification.py  test_network_config.py  vercel.json
.claude/agents/: build-mcp.md  email-summary-assistant.md
api/: phrases.py  score.py  start.py
match_cal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
