[project]
name = "match-cal"
version = "0.1.0"
description = "双人心算对战游戏"
authors = [
    {name = "clark", email = "clark@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "aiohttp-cors>=0.7.0",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["run_server", "combined_server", "test_network_config"]

[tool.uv]
dev-dependencies = []
