[project]
name = "match-cal"
version = "0.1.0"
description = "两位数心算对战游戏 - 纯前端实现"
authors = [
    {name = "clark", email = "clark@example.com"}
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "vercel>=0.2.1",
]
